--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,7 @@
-botocore==1.12.102
-certifi==2018.11.29
-chardet==3.0.4
-clickhouse-driver==0.0.18
+boto3==1.9.156
 copyingmock==0.2
-docutils==0.14
-idna==2.8
-infi.clickhouse-orm==1.0.4
-iso8601==0.1.12
-jmespath==0.9.4
-python-dateutil==2.8.0
-pytz==2018.9
-requests==2.21.0
-s3transfer==0.2.0
-six==1.12.0
-urllib3==1.24.2
-boto3 >= 1.9.86
-Django==2.1.7
-pytz==2018.9
-djangorestframework==3.9.2
-django-crispy-forms
+Django==2.2.1
+djangorestframework==3.9.4
+django-crispy-forms==1.7.2
+infi.clickhouse_orm==1.0.4
+requests==2.22.0
